kube/mongo/pv.pvc.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mongo
