kube/mongo/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: mongo
  labels:
    app: mongo
spec:
  type: NodePort
  ports:
   - port: 27017
  selector:
   app: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
  namespace: mongo
  labels:
    app: mongo
spec:
  type: NodePort
  ports:
   - targetPort: 8081
  selector:
   app: mongo
